feat: Update CODEOWNERS for better ownership and review assignment
feat: Add ISSUE_TEMPLATE configuration for discussions and documentation links

chore: Enhance dependabot configuration for Go modules and GitHub Actions

feat: Create release-drafter.yml for automatic draft releases based on merged PRs

ci: Implement CI workflow for continuous integration with linting, testing, and building

feat: Add release drafter workflow for automated release notes generation

chore: Update release workflow to include validation and categorized changelog generation

ci: Introduce security scanning workflow for vulnerability checks and license compliance

chore: Update golangci-lint configuration to version 2 with improved settings

refactor: Remove example configuration file as it is no longer needed

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,25 +1,58 @@
-# Code Owners
-# These owners will be requested for review when someone opens a pull request
-# https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
+# CODEOWNERS - Automatic Review Assignment
+# Documentation: https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
+#
+# Each line is a file pattern followed by one or more owners.
+# Order matters - later patterns override earlier ones.
 
+# =============================================================================
 # Default owner for everything
+# =============================================================================
 * @yllada
 
-# UI components
+# =============================================================================
+# Core application
+# =============================================================================
+/main.go @yllada
+/go.mod @yllada
+/go.sum @yllada
+
+# =============================================================================
+# UI components (GTK/Adwaita)
+# =============================================================================
 /ui/ @yllada
 
+# =============================================================================
 # VPN connection management
+# =============================================================================
 /vpn/ @yllada
 
-# Configuration
+# =============================================================================
+# Configuration and utilities
+# =============================================================================
 /config/ @yllada
-/configs/ @yllada
+/common/ @yllada
 
-# Build and deployment
+# =============================================================================
+# Security-sensitive code
+# =============================================================================
+/keyring/ @yllada
+
+# =============================================================================
+# CI/CD and DevOps
+# =============================================================================
 /.github/ @yllada
+/.github/workflows/ @yllada
 /scripts/ @yllada
+
+# =============================================================================
+# Packaging and Distribution
+# =============================================================================
 /debian/ @yllada
 /snap/ @yllada
+/assets/ @yllada
 
-# Security-sensitive code
-/keyring/ @yllada
+# =============================================================================
+# Documentation
+# =============================================================================
+*.md @yllada
+LICENSE @yllada
